# ceres_sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: cotire.cmake
include/: gps_test.h  test_common.h
include/factors/: SE3.h  attitude_3d.h  imu.h  imu_1d.h  imu_3d.cpp  imu_3d.h  position_1d.h  position_3d.h  range_1d.h
include/lie/: math_helper.h  quat.h  tests.cpp  xform.h
include/utils/: jac.cpp  jac.h  robot1d.cpp  robot1d.h
lib/factors/include/factors/: SE3.h  attitude_3d.h  camera.h  carrier_phase.h  clock_bias_dynamics.h  dynamics_1d.h  dynamics_3d.h  imu_1d.h  imu_3d.h  position_1d.h  position_3d.h  pseudorange.h  range_1d.h  switch.h  switch_pseudorange.h  transform_1d.h
lib/factors/src/: imu_3d.cpp
lib/utils/include/: cam.h
lib/utils/include/utils/: cam.h  estimator_wrapper.h  jac.h  logger.h  robot1d.h  trajectory_sim.h
lib/utils/src/: estimator_wrapper.cpp  jac.cpp  robot1d.cpp  trajectory_sim.cpp
matlab/: Imu3DCheckPropagation.m  Imu3DMultiWindowPlot.m  TimeOffsetMultiWindowPlot.m  TrajectoryOptimization1DMultiPlot.m  TrajectoryOptimization1DSinglePlot.m  TrajectoryOptimization3DSinglePlot.m
params/: sim_params.yaml
python/: CarrierPhase.ImuTrajectory.py  CarrierPhase.Trajectory.py  Imu3D_MultiWindow.py  Imu3D_Propagation.py  MultipathPseudorange.StandardResidual.py  MultipathPseudorange.SwitchedResidual.py  Pseudorange.ImuTrajectory.py  Pseudorange.Trajectory.py  Pseudorange.TrajectoryClockDynamics.py  SwitchPseudorange.ImuTrajectory.py  TimeOffset.3DmultirotorPoseGraph.py  plotRawGPS.py  plotWindow.py
scripts/: build_and_run.sh  jac_test.py
src/: attitude.cpp  camera.cpp  carrier_phase.cpp  control.cpp  dev_test.cpp  imu.cpp  imu1d.cpp  imu3d.cpp  imu_1d.cpp  imu_3d.cpp  pose.cpp  position.cpp  position1d.cpp  position3d.cpp  position_1d.cpp  position_3d.cpp  prange.cpp  pseudorange.cpp  switch.cpp  test_common.cpp  time_offset.cpp
